--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,7 +16,7 @@ $col-5: #0B486B;
 @import 'blocks/nav';
 
 BODY {
-    background: white;
+    backgrouxnd: white;
     font: 16px/1.4 Georgia, serif;
     color: darken($col-5, 10%);
     }
