Fix h-light of current value + h-light to output

--- a/src/scss/blocks/demo.scss
+++ b/src/scss/blocks/demo.scss
@@ -36,6 +36,7 @@
     height: 250px;
     box-sizing: border-box;
     flex-grow: 1;
+    flex-shrink: 0;
     padding: 1rem;
     background: $col-2;
     // border: 3px solid $col-3
