--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -92,7 +92,7 @@ $nav-grad-step: .5rem;
 
 .nav__marker {
   position: absolute;
-  top: 0;
+  top: 21px;
   right: -1rem;
   width: 2rem;
   height: 2rem;
