Add delay for scroll, edit content

--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -100,5 +100,5 @@ $nav-grad-step: .5rem;
   background: $col-1;
   border-radius: 50%;
   box-shadow: 0 0 0 10px $col-4;
-  transition: all .5s linear;
+  transition: all .5s;
 }
