--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -1,64 +1,81 @@
 BODY {
-    background: $col-1;
-    font: 16px/1.4 Georgia, serif;
-    color: darken($col-5, 8%);
-    }
-
-H1, H2, H3, H4 {
-    margin-top: 0;
-    font-weight: normal;
-    }
-
-Ul, LI {
-    margin: 0;
-    padding: 0;
+  background: #FFF;
+  font: 16px/1.4 Georgia, serif;
+  color: #111;
 }
 
-MARK {
-  box-shadow: 0 0 0 2px $col-4;
-  background: $col-4;
-  color: $col-2;
+A {
+  color: hsl(225, 90%, 40%)
+}
+
+UL {
+  list-style-type: none;
+}
+
+H1,
+H2,
+H3,
+H4 {
+  margin-top: 0;
+  font-weight: normal;
+}
+
+LI,
+Ul {
+  margin: 0;
+  padding: 0;
 }
 
 CODE {
-  padding: .1rem .3rem;
+  padding: 0.1rem 0.3rem;
   background: $col-2;
   border-radius: 3px;
   color: $col-5;
-  font-size: .95em;
+  font-size: 0.95em;
 }
 
-/* Content
----------------------------- */
+MARK {
+  background: #333;
+  box-shadow: 0 0 0 2px #333;
+  color: #FFF;
+}
+
+
+.hidden-content {
+  display: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* CONTENT
+--------------------------------------------- */
+
 .content {
-    /*border: 1px solid;*/
 
-    A {
-        color: $col-5;
-    }
+  &__item {
+    display: block;
+    width: 100%;
+    min-height: 100vh;
+    padding: 1rem 2em;
+    box-sizing: border-box;
+    border-bottom: 1px dotted;
+  }
 
-    &__title {
-        }
-
-    &__item {
-        display: block;
-        width: 100%;
-        min-height: 100vh;
-        padding: 1rem 2em;
-        box-sizing: border-box;
-        border-bottom: 1px dotted $col-4;
-        }
-
-        &__title {
-            color: $col-4;
-            }
-    }
-
+}
 /* Values */
 .content-values__term {
-    font-weight: bold;
-    color: $col-4;
-    }
+  font-weight: bold;
+}
+
 .content-values__desc {
-    margin-bottom: 1rem;
-    }
+  margin-bottom: 1rem;
+}
