--- a/src/scss/blocks/demo.scss
+++ b/src/scss/blocks/demo.scss
@@ -3,8 +3,8 @@
 }
 
 .demo-values__control {
-  margin: 0 0.5rem 0.5rem 0;
-  padding: 0.3rem 0.7rem;
+  margin: 0 .5rem .5rem 0;
+  padding: .3rem .7rem;
   border: 0;
   border-radius: 3px;
   background: #AAA;
@@ -26,9 +26,10 @@
   flex-grow: 1;
   height: 250px;
   margin: 0 1rem 1rem 0;
-  padding: 0.5rem;
+  padding: .5rem;
   box-sizing: border-box;
   border: 2px solid #000;
+
   @media ( max-width: 960px ) {
     width: 100%;
     margin-right: 0;
@@ -42,7 +43,7 @@
   margin-bottom: 1rem;
   padding: 1rem;
   background: #DDD;
-  border-radius: 0.75rem;
+  border-radius: .75rem;
   white-space: pre;
   font-family: monospace;
 }
@@ -53,27 +54,33 @@
 
 .child {
   position: relative;
-  min-width: 2rem;
-  min-height: 2rem;
-  padding: 0.5rem;
+  min-width: 2.5rem;
+  min-height: 2.5rem;
+  padding: .5rem;
   background-color: #CCC;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   border: 1px solid #FFF;
 }
 
+.demo--has-featured .child--featured {
+  background-color: #999;
+}
+
+$svgFill: 000;
+
 .child:nth-child(1) {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.25em' style='font: 30px/1 Georgia, serif' fill='%23333' fill-opacity='.7'%3E 1 %3C/text%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.25em' style='font: 30px/1 Georgia, serif' fill='%23#{$svgFill}' fill-opacity='.6'%3E 1 %3C/text%3E%3C/svg%3E");
 }
 
 .child:nth-child(2) {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.25em' style='font: 30px/1 Georgia, serif' fill='%23333' fill-opacity='.7'%3E 2 %3C/text%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.25em' style='font: 30px/1 Georgia, serif' fill='%23#{$svgFill}' fill-opacity='.6'%3E 2 %3C/text%3E%3C/svg%3E");
 }
 
 .child:nth-child(3) {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.25em' style='font: 30px/1 Georgia, serif' fill='%23333' fill-opacity='.7'%3E 3 %3C/text%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.25em' style='font: 30px/1 Georgia, serif' fill='%23#{$svgFill}' fill-opacity='.6'%3E 3 %3C/text%3E%3C/svg%3E");
 }
 
 .child:nth-child(4) {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.25em' style='font: 30px/1 Georgia, serif' fill='%23333' fill-opacity='.7'%3E 4 %3C/text%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.25em' style='font: 30px/1 Georgia, serif' fill='%23#{$svgFill}' fill-opacity='.6'%3E 4 %3C/text%3E%3C/svg%3E");
 }
