--- a/src/scss/global/layout.scss
+++ b/src/scss/global/layout.scss
@@ -1,14 +1,145 @@
-.l-wrapper {
+.page-container {
   display: flex;
+  width: 100%;
   min-height: 100%;
 }
 
-.l-main {
+.page-main {
   flex: 1;
 }
 
-.l-aside {
+.page-aside,
+.page-aside__content {
+  width: 23%;
+  min-width: 280px;
+  max-width: 350px;
+}
+
+.page-aside {
+  --mob-collapsed-width: 40px;
+  --mob-expanded-width: 320px;
+  --mob-hidden-width: calc((var(--mob-expanded-width) - var(--mob-collapsed-width)) * -1);
+  --stripe-width: 10px;
+  --duration: .2s;
+
   position: relative;
-  @include aside-width;
   order: -1;
+  z-index: 2;
+  flex-shrink: 0;
+
+  @media ( max-width: 900px ) {
+    min-width: 0;
+    width: var(--mob-collapsed-width);
+  }
+}
+
+.page-aside__content {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  overflow: auto;
+  background: var(--aside-bg);
+  background-image:
+    linear-gradient(
+      to left,
+      var(--nav-marker-border),
+      var(--nav-marker-border)
+    );
+  background-size: var(--stripe-width) 100%;
+  background-position: 100% 0;
+  background-repeat: no-repeat;
+  scrollbar-width: thin;
+  scrollbar-color: var(--nav-thumb-bg) var(--nav-scrollbar-bg);
+
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: var(--nav-scrollbar-bg);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--nav-thumb-bg);
+    border-radius: 6px;
+    border: 3px solid var(--nav-scrollbar-bg);
+  }
+
+  @media ( max-width: 900px ) {
+    --stripe-width: 6px;
+
+    width: var(--mob-expanded-width);
+    transition: transform var(--duration);
+
+    .page-aside--collapsed & {
+      transform: translateX(var(--mob-hidden-width));
+      overflow: hidden;
+
+      .nav {
+        opacity: 0;
+      }
+    }
+
+    .nav__marker {
+      display: none;
+    }
+  }
+}
+
+.page-aside__toggler {
+  --button-size: 2rem;
+  --offset: calc((var(--mob-expanded-width) - var(--button-size)) - 12px);
+
+  display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(var(--offset));
+  width: var(--button-size);
+  padding: 0;
+  border: 0;
+  outline: none;
+  background: none;
+  transition: transform var(--duration);
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: var(--button-size);
+    height: var(--button-size);
+    margin: auto;
+    mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 56.083'%3E%3Cpath d='M29.344 52.229c.875.886.875 2.31 0 3.191a2.214 2.214 0 0 1-3.158 0L.656 29.64a2.27 2.27 0 0 1 0-3.191L26.186.664a2.212 2.212 0 0 1 3.158 0 2.27 2.27 0 0 1 0 3.191L6.064 28.042l23.28 24.187z'%3E%3C/path%3E%3C/svg%3E");
+    mask-repeat: no-repeat;
+    mask-position: 50% 50%;
+    background: var(--nav-link);
+    transition: transform var(--duration);
+  }
+
+  .page-aside--collapsed & {
+    transform: translateX(0);
+
+    &::before {
+      transform: rotate(180deg);
+    }
+  }
+
+  @media ( max-width: 900px ) {
+    display: block;
+  }
+}
+
+.container {
+  padding-left: 1em;
+  padding-right: 1em;
+  box-sizing: border-box;
+
+  @media ( min-width: 800px ) {
+    padding-left: 2em;
+    padding-right: 2em;
+  }
 }
